# log-analyzeri

./: README.md  pyproject.toml
app/: main.py
app/api/: log_query.py  logs.py
app/core/: config.py  errors.py  logging.py
app/models/: error.py  log_entry.py
docs/: logging.md
logs/: app.log.jsonl
tests/: test_health.py  test_log_query.py  test_logs.py
